# meson_quickstart

./: LICENSE  README.md  meson.build
include/: cxxtelebot.h
src/: impl.cpp  meson.build
test/: meson.build  test.cpp
